upgrade to spring loaded 0.9.2 and tweak default permgen settings for Grails 2.0. Fixes GRAILS-7756